--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "remark-html": "^15.0.1"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^12.1.6",
     "autoprefixer": "^10.4.7",
     "eslint": "^8.18.0",
     "eslint-config-airbnb": "^19.0.4",
