Added eslint and configuration Installed Next eslint plugin Installed missing plugin

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,9 +15,10 @@
         "ecmaVersion": "latest",
         "sourceType": "module"
     },
-    "plugins": [
-        "react"
-    ],
+    "plugins": ["prettier"],
     "rules": {
-    }
+    "prettier/prettier": "warn",
+    "arrow-body-style": "off",
+    "prefer-arrow-callback": "off"
+  }
 }
