--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
+    "fast-deep-equal": "^3.1.3",
     "gray-matter": "^4.0.3",
     "next": "latest",
     "react": "17.0.2",
